tests/externInfo/dhrystone-exported/db/invalid/path/Proc7.c.loc
68.19.0.8929 73.8.0.8933 74.8.0.8945 75.8.0.8953 